--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -295,7 +295,7 @@
       "newYork": "美国新泽西州伊斯林，伍德大道南33号600室，邮编08830",
       "losAngeles": "美国加利福尼亚州康普顿，南中央大道2250号，邮编90220",
       "london": "英国伦敦W1W 5PF，大波特兰街167-169号5楼",
-      "melbourne": "维多利亚州图拉马林区马莱特路7-9号5号套房，邮编3043, 手机：+61 432254969, 电话：+61 388205157, 邮箱：info@gglaustralia.com"
+      "melbourne": "维多利亚州图拉马林区马莱特路7-9号5号套房，邮编3043"
     }
   },
   "footer": {
