--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -249,6 +249,7 @@
       "qatar": "卡塔尔"
     },
     "cities": {
+      "melbourne": "墨尔本",
       "kerala": "喀拉拉邦",
       "mumbai": "孟买",
       "mumbaiAndheri": "孟买-安德里",
@@ -269,10 +270,10 @@
       "chicago": "芝加哥",
       "newYork": "纽约",
       "losAngeles": "洛杉矶",
-      "london": "伦敦",
-      "melbourne": "墨尔本"
+      "london": "伦敦"
     },
     "addresses": {
+       "melbourne": "维多利亚州图拉马林区马莱特路7-9号5号套房，邮编3043",
       "kerala": "印度喀拉拉邦科钦682013，特瓦拉渡口，伊丽莎白纪念大楼CC 59/801A",
       "mumbai": "印度马哈拉施特拉邦新孟买400614，CBD贝拉普尔15区，87号地块，谢尔顿立方803/804室",
       "mumbaiAndheri": "印度孟买400059，安德里东区，MV先生路，萨哈广场综合体，米达斯503室",
@@ -294,8 +295,7 @@
       "chicago": "美国伊利诺伊州芝加哥，北大道939号西，750室，邮编60642",
       "newYork": "美国新泽西州伊斯林，伍德大道南33号600室，邮编08830",
       "losAngeles": "美国加利福尼亚州康普顿，南中央大道2250号，邮编90220",
-      "london": "英国伦敦W1W 5PF，大波特兰街167-169号5楼",
-      "melbourne": "维多利亚州图拉马林区马莱特路7-9号5号套房，邮编3043"
+      "london": "英国伦敦W1W 5PF，大波特兰街167-169号5楼"
     }
   },
   "footer": {
