--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -9,9 +9,19 @@
     "contact": "联系我们",
     "switchcountry": "切换国家"
   },
-  "hero": {
-    "title": "值得信赖的项目货运合作伙伴",
-    "subtitle": "在海迅，我们擅长为项目货物提供定制物流解决方案，确保精确满足客户的期限和要求。",
+ "hero": {
+  "slide1": {
+    "title": "欢迎来到海迅",
+    "subtitle": "海迅环球有限公司总部位于中国深圳，提供覆盖海运、陆运和空运的一站式物流解决方案，服务全球贸易。"
+  },
+  "slide2": {
+    "title": "拼箱服务（LCL）",
+    "subtitle": "海迅在多条贸易航线上运营自有拼箱服务，提供灵活的船期、有竞争力的价格以及完全透明的费用体系。"
+  },
+  "slide3": {
+    "title": "整箱服务（FCL）",
+    "subtitle": "凭借自有集装箱设备和强大的船公司合作关系，海迅提供可靠的整箱运输解决方案，实现成本与效率的最优平衡。"
+  },
     "contactUs": "联系我们",
     "customerPortal": "客户门户",
     "partnerPortal": "合作伙伴门户",
