--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -155,12 +155,10 @@
     "title": "关于海迅环球",
     "subtitle": "30多年的物流卓越",
     "whoWeAre": "我们是谁",
-    "paragraph1": "海迅环球深圳公司凭借30多年的物流专业知识。",
-    "paragraph2": "海迅环球深圳成立于2019年，秉承集团的诚信承诺。",
-    "paragraph3": "我们的服务包括量身定制的运输计划。",
-    "pageParagraph1": "海迅环球物流（深圳）有限公司总部位于中国深圳，提供拼箱、整箱、普通货物和散货的全球货运代理服务，涵盖海运、陆运和空运。我们的服务包括订舱、报关、检验、仓储、配送、门到门送货和物流规划。",
-    "pageParagraph2": "以诚信、正直、服务和速度为指导，我们秉承务实、勤奋和负责的企业精神。我们的商业模式建立在创新、合作共赢和对客户满意度的坚定承诺之上。",
-    "pageParagraph3": "凭借现代化的管理方法、先进的技术和周到的客户服务，我们始终坚持客户至上的原则。我们致力于以可靠、高效和无缝的物流解决方案给客户留下深刻印象。",
+    "paragraph1": "海迅环球深圳凭借超过30年的物流行业经验，业务涵盖海运、陆运、空运、报关、仓储及配送服务，集团网络已拓展至中国、印度、马来西亚、阿联酋等多个国家和地区。",
+"paragraph2": "海迅环球深圳成立于2019年，秉承集团诚信经营、客户至上和快速响应的核心理念，致力于在中国提供可靠且以客户为中心的服务体验。",
+"pageParagraph1": "海迅环球深圳凭借超过30年的物流行业经验，业务涵盖海运、陆运、空运、报关、仓储及配送服务，集团网络已拓展至中国、印度、马来西亚、阿联酋等多个国家和地区。",
+"pageParagraph2": "海迅环球深圳成立于2019年，秉承集团诚信经营、客户至上和快速响应的核心理念，致力于在中国提供可靠且以客户为中心的服务体验。"
     "fastDelivery": "全球快速配送",
     "fastDeliveryDesc": "我们广泛的全球网络确保您的货物按时到达目的地。",
     "safeDelivery": "安全可靠配送",
