--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -174,15 +174,15 @@
     "subtitle": "Delivering excellence through capacity, service, and expertise",
     "transportation": {
       "title": "Transportation Capacity",
-      "description": "Engaged in cargo transportation services all over the country."
+      "description": "With a registered capital of 50 million yuan, the company has Jiefang, Dongfeng and Isuzu light format transportation vehicles, which are engaged in cargo transportation services all over the country."
     },
     "logistics": {
       "title": "Logistics Service",
-      "description": "Advanced information system with full process visibility."
+      "description": "The company has advanced information system, which can be seen in the whole process, so that you can master the progress of each business at any time, and strict system prevents errors and accidents."
     },
     "team": {
       "title": "Team Personnel",
-      "description": "Highly competitive operation team with years of experience."
+      "description": "The company has a highly competitive operation team, has been engaged in domestic cargo transportation services for many years, and has a rigorous transportation organization team."
     }
   },
   "contact": {
