--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -94,7 +94,7 @@
     },
     "customs": {
       "title": "Customs Declaration & Inspection",
-      "description": "Smooth and efficient completion of all customs formalities.",
+      "description": "As one of the leading custom clearing agents, we ensure that all clearance formalities are done in a smooth.",
       "heroTagline": "Professional customs brokerage services.",
       "content1": "As one of the leading custom clearing agents, we ensure that all clearance formalities are done in a smooth and easy manner so that all our customers receive their goods on time.",
       "content2": "Our customs brokers help ease import and export regulations and all paperwork related to trade compliances and procedures to ensure that your consignments via sea, land and air leave on time."
